<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterNewActivity">

    <ImageView
        android:id="@+id/returnImg2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        tools:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/accountImg3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/opensans"
            android:text="@string/register_new_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/fisToggle"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:background="@drawable/switch_register"
                android:checked="true"
                android:fontFamily="@font/opensans"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textOff="@string/register_new_toggle1"
                android:textOn="@string/register_new_toggle1"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/morToggle"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:background="@drawable/switch_register"
                android:fontFamily="@font/opensans"
                android:textAllCaps="false"
                android:textOff="@string/register_new_toggle2"
                android:textOn="@string/register_new_toggle2"
                android:textSize="16sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/newAliasEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/register_new_alias"
            android:inputType="textPersonName"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/newNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/register_new_name"
            android:inputType="textPersonName"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/newAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/register_new_address"
            android:inputType="textPersonName"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/newEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/register_new_email"
            android:inputType="textEmailAddress"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/newPhoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/register_new_phone"
            android:inputType="phone"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/newRfcEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/register_new_rfc"
            android:inputType="textPersonName"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/newRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_button"
            android:fontFamily="@font/opensans"
            android:text="@string/menu_new_register"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>