<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/opensansbold"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/login_email_hint"
            android:inputType="textPersonName"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dip"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:fontFamily="@font/opensans"
            android:text="@string/login_button"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>